--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
                 <span class="navbar-item">
                   <a
                     class="button is-white is-outlined"
-                    href=/parks"
+                    href=/parks
                   >
                     <span>Parks</span>
                   </a>
@@ -50,7 +50,7 @@
                   </a>
                 </span>
                 <span class="navbar-item">
-                  <a class="button is-white is-outlined" href="/states">
+                  <a class="button is-white is-outlined" href=/states>
                     <span>States</span>
                   </a>
                 </span>
