--- a/views/trails/new.ejs
+++ b/views/trails/new.ejs
@@ -50,7 +50,7 @@
     </style>
   </head>
   <body>
-    <h3>Create a new Trail</h3>
+    <h3>Create/Edit Trail</h3>
 
     <div class="container">
       <form method="POST" action="/trails">
