--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
                 <span class="navbar-item">
                   <a
                     class="button is-white is-outlined"
-                    href="http://localhost:3000/parks"
+                    href="https://national-parks-dev.herokuapp.com/parks"
                   >
                     <span>Parks</span>
                   </a>
