--- a/views/favorites/index.ejs
+++ b/views/favorites/index.ejs
@@ -12,7 +12,10 @@
       <h2><%= trail.length %></h2>
       <h3><%= trail.difficulty %></h3>
       <br />
-      <a href="/favorites/index/<%= trail.id %>">Add to the favorites</a>
+      <a
+        href="https://national-parks-dev.herokuapp.com/favorites/index/<%= trail.id %>"
+        >Add to the favorites</a
+      >
     </body>
   </body>
 </html>
