--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,7 +44,7 @@
                 <span class="navbar-item">
                   <a
                     class="button is-white is-outlined"
-                    href="http://localhost:3000//trails"
+                    href="http://localhost:3000/trails"
                   >
                     <span>Trails</span>
                   </a>
