changed all trails to all states

--- a/views/states/index.ejs
+++ b/views/states/index.ejs
@@ -26,7 +26,7 @@
    
         <article class="message is-link">
             <div class="message-header">
-                <p>All trails</p>
+                <p>All states</p>
                 <button class="delete" aria-label="delete"></button>
             </div>
             
