--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
                 <span class="navbar-item">
                   <a
                     class="button is-white is-outlined"
-                    href="http://localhost:3000/parks"
+                    href="https://national-parks-dev.herokuapp.com/parks"
                   >
                     <span>Parks</span>
                   </a>
@@ -44,22 +44,22 @@
                 <span class="navbar-item">
                   <a
                     class="button is-white is-outlined"
-                    href="http://localhost:3000/trails"
+                    href="https://national-parks-dev.herokuapp.com/trails"
                   >
                     <span>Trails</span>
                   </a>
                 </span>
                 <span class="navbar-item">
-                  <a class="button is-white is-outlined" href="http://localhost:3000/states">
+                  <a class="button is-white is-outlined" href="https://national-parks-dev.herokuapp.com/states">
                     <span>States</span>
                   </a>
                 </span>
                 <span class="navbar-item">
-                  <a class="button is-white is-outlined" href="http://localhost:3000/favorites">
+                  <a class="button is-white is-outlined" href="https://national-parks-dev.herokuapp.com/favorites">
                     <span>Favorites</span>
                     
                     <span class="navbar-item">
-                      <a class="button is-white is-outlined" href="http://localhost:3000/profile">
+                      <a class="button is-white is-outlined" href="https://national-parks-dev.herokuapp.com/profile">
                         <span>Profile</span>
                   </a>
                 </span>
